Comment out copyright link for now I will ask for permission soon

--- a/assets/da-manual/index.html
+++ b/assets/da-manual/index.html
@@ -14,7 +14,7 @@
       <img src="./images/mide.jpg" border=0>
       <br><br>
       <a href="toc.html">table of contents</a><br>
-      <a href="copyright.html">copyright information</a><br>
+      <!-- <a href="copyright.html">copyright information</a><br> -->
     </center>
     </div>
     </font>
